--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     margin: 0;
-    padding: 0;
+    padding: 0 0;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
